Fixed bottom margin on smaller displays

--- a/app/public/style.css
+++ b/app/public/style.css
@@ -347,6 +347,8 @@ input[type="date"]::-webkit-calendar-picker-indicator {
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  margin: 15px 0 15px 0;
+
 }
 
 .profile-edit h1 {
